import java.util.ArrayList;

public class Departamento extends Dependencia{
    ArrayList<Trabajador> trabajadores;
    int maxCantTrabajadores;
}
