abstract public class Dependencia {
    protected String nombre;
    protected Dirigente dirigente;
}
