public class Direccion extends Dependencia{
    private String direccion;
    private String fax;
    private String telefono;
}
