public class Dirigente extends Trabajador {
    private int annosExp;
}
