public class Subdireccion extends Dependencia{
}
