public class Trabajador {
    protected String nombre;
    protected int edad;
    protected String plaza;
    protected String id;
    protected int annosExp;
}
